tweaks + add new list demo

--- a/apps/angular-test-app/src/app/components/breadcrumb-demo/breadcrumb-demo.component.html
+++ b/apps/angular-test-app/src/app/components/breadcrumb-demo/breadcrumb-demo.component.html
@@ -1,47 +1,31 @@
 <div class="wrapper">
-  <div class="title">Default with menu</div>
+  <h5 class="uxg-h5">Default with menu</h5>
   <mat-toolbar>
     <uxg-breadcrumb [breadcrumbs]="defaultBreadcrumbs"></uxg-breadcrumb>
   </mat-toolbar>
 
-  <div class="title">Default with menu + primary color</div>
+  <h5 class="uxg-h5">Default with menu + primary color</h5>
   <mat-toolbar>
     <uxg-breadcrumb [breadcrumbs]="defaultBreadcrumbs" color="primary"></uxg-breadcrumb>
   </mat-toolbar>
 
-  <div class="title">Default without menu</div>
+  <h5 class="uxg-h5">Default without menu</h5>
   <mat-toolbar>
     <uxg-breadcrumb [breadcrumbs]="defaultBreadcrumbsWithoutMenu"></uxg-breadcrumb>
   </mat-toolbar>
 
-  <div class="title">Only one item</div>
+  <h5 class="uxg-h5">Only one item</h5>
   <mat-toolbar>
     <uxg-breadcrumb [breadcrumbs]="onlyOneItem"></uxg-breadcrumb>
   </mat-toolbar>
 
-  <div class="title">Dense mode</div>
+  <h5 class="uxg-h5">Dense mode</h5>
   <mat-toolbar>
     <uxg-breadcrumb dense [breadcrumbs]="defaultBreadcrumbsWithoutMenu"></uxg-breadcrumb>
   </mat-toolbar>
 
-  <div class="title">Dense mode + accent color</div>
+  <h5 class="uxg-h5">Dense mode + accent color</h5>
   <mat-toolbar>
     <uxg-breadcrumb dense [breadcrumbs]="defaultBreadcrumbsWithoutMenu" color="accent"></uxg-breadcrumb>
   </mat-toolbar>
-
-  <!-- <uxg-search-input #search></uxg-search-input>
-  <div class="title">
-    With hint
-  </div>
-  <uxg-search-input hint="Search Api name or ID" placeholder="" style="width: 450px;"></uxg-search-input>
-
-  <div class="title">
-    Custom placeholder
-  </div>
-  <uxg-search-input placeholder="Search Api name or ID" style="width: 550px;"></uxg-search-input>
-
-  <div class="title">
-    Dense mode
-  </div>
-  <uxg-search-input dense placeholder="Search Api name or ID" style="width: 250px;"></uxg-search-input> -->
 </div>
