--- a/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.html
+++ b/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.html
@@ -13,14 +13,14 @@
     [ngClass]="{ 'uxg-list-item-selected': isActive(node.path) }"
     *ngFor="let node of navigationNodes"
   >
-    <mat-icon mat-list-icon>{{ node.icon }}</mat-icon>
+    <mat-icon matListItemIcon>{{ node.icon }}</mat-icon>
     <p>{{ node.title }}</p>
   </a>
 </mat-nav-list>
 
 <mat-nav-list class="uxg-link-list">
   <a (click)="logout.emit()" mat-list-item>
-    <mat-icon mat-list-icon>power_settings_new</mat-icon>
+    <mat-icon matListItemIcon>power_settings_new</mat-icon>
     <span class="uxg-body-2">Logout</span>
   </a>
 </mat-nav-list>
