--- a/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
+++ b/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
@@ -1,5 +1,5 @@
 <div class="block-test">
-  <h3 class="uxg-h3">Avatars</h3>
+  <h4 class="uxg-h4">Avatars</h4>
   <div class="example-row avatar-default-test">
     <div class="uxg-avatar" large></div>
     <div class="uxg-avatar"></div>
@@ -39,16 +39,16 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Badges</h3>
+  <h4 class="uxg-h4">Badges</h4>
   <div class="example-row badge-test">
-    <span matBadge="4" class="uxg-subtitle-2" matBadgeSize="small" matBadgeColor="success">Success</span>
-    <span matBadge="18" class="uxg-subtitle-2" matBadgeColor="warn" matBadgeSize="medium">Warnings</span>
-    <span matBadge="72" class="uxg-subtitle-2" matBadgeColor="error">Errors</span>
+    <span matBadge="4" class="uxg-subtitle-2" matBadgeSize="small" matBadgeColor="success" matBadgeOverlap="false">Success</span>
+    <span matBadge="18" class="uxg-subtitle-2" matBadgeColor="warn" matBadgeSize="medium" matBadgeOverlap="false">Warnings</span>
+    <span matBadge="72" class="uxg-subtitle-2" matBadgeColor="error" matBadgeOverlap="false">Errors</span>
   </div>
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Side badges</h3>
+  <h4 class="uxg-h4">Side badges</h4>
   <div class="example-row badge-side-test">
     <h6 matBadge="4" class="uxg-subtitle-2 uxg-side-badge" matBadgeSize="small">Currencies</h6>
     <h6 matBadge="18" class="uxg-subtitle-2 uxg-side-badge" matBadgeColor="secondary" matBadgeSize="medium">Folders</h6>
@@ -58,7 +58,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Breadcrumb</h3>
+  <h4 class="uxg-h4">Breadcrumb</h4>
   <div class="example-row">
     <ul class="uxg-breadcrumb uxg-breadcrumb-responsive">
       <button mat-icon-button color="accent" class="uxg-breadcrumb-back">
@@ -72,7 +72,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Buttons</h3>
+  <h4 class="uxg-h4">Buttons</h4>
   <div class="example-row button-default-test">
     <button mat-button>Basic</button>
     <button mat-button color="primary">Primary</button>
@@ -183,7 +183,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Button toggle</h3>
+  <h4 class="uxg-h4">Button toggle</h4>
   <div class="example-row toggle-filter-test">
     <mat-button-toggle-group class="uxg-filtering-toggle-group" value="public">
       <mat-button-toggle value="public">
@@ -247,7 +247,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Cards</h3>
+  <h4 class="uxg-h4">Cards</h4>
   <div class="example-row card-basic-test">
     <mat-card class="example-card">
       <mat-card-header>
@@ -313,7 +313,7 @@
       <span class="uxg-h1 uxg-card-product-name">PRO</span>
     </mat-card>
     <mat-card class="uxg-card-product">
-      <span class="uxg-h3 uxg-card-product-name">PRO</span>
+      <span class="uxg-h4 uxg-card-product-name">PRO</span>
     </mat-card>
     <mat-card class="uxg-card-product" dense>
       <span class="uxg-h4 uxg-card-product-name">PRO</span>
@@ -328,7 +328,7 @@
       <span class="uxg-h1 uxg-card-solution-name">SOL</span>
     </mat-card>
     <mat-card class="uxg-card-solution">
-      <span class="uxg-h3 uxg-card-solution-name">SOL</span>
+      <span class="uxg-h4 uxg-card-solution-name">SOL</span>
     </mat-card>
     <mat-card class="uxg-card-solution" dense>
       <span class="uxg-h4 uxg-card-solution-name">SOL</span>
@@ -340,7 +340,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Chips</h3>
+  <h4 class="uxg-h4">Chips</h4>
   <div class="example-row chip-states-test">
     <mat-chip-listbox>
       <mat-chip>Simple</mat-chip>
@@ -445,7 +445,7 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Tabs</h3>
+  <h4 class="uxg-h4">Tabs</h4>
   <h5>Standard Tabs</h5>
   <mat-tab-group class="uxg-tabs-v2">
     <mat-tab label="Tab A"> {{ tabText }} </mat-tab>
@@ -477,12 +477,12 @@
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Link</h3>
+  <h4 class="uxg-h4">Link</h4>
   <div class="link-test">This is <a class="uxg-link" href="">uxg-link</a></div>
 </div>
 
 <div class="block-test">
-  <h3 class="uxg-h3">Slide Toggle</h3>
+  <h4 class="uxg-h4">Slide Toggle</h4>
   <div class="example-row slide-toggle-states-test">
     <mat-slide-toggle>Default</mat-slide-toggle>
     <mat-slide-toggle checked="true">Accent</mat-slide-toggle>
@@ -491,7 +491,7 @@
 </div>
 
 <div>
-  <h3 class="uxg-h3">Inputs</h3>
+  <h4 class="uxg-h4">Inputs</h4>
   <h5 class="uxg-h5">Input</h5>
   <div class="example-row">
     <mat-form-field floatLabel="never" appearance="outline">
@@ -662,7 +662,7 @@
 
 <div>
   <div>
-    <h3 class="uxg-h3">Expansion</h3>
+    <h4 class="uxg-h4">Expansion</h4>
     <h5 class="uxg-h5">Expansion filter</h5>
     <div class="example-row">
       <mat-expansion-panel class="uxg-expansion-filter">
