--- a/apps/angular-test-app/src/app/components/card-demo/card-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/card-demo/card-demo.component.scss
@@ -4,4 +4,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 250px);
   grid-gap: $uxg-spacing-3;
+
+  margin-bottom: $uxg-spacing-5;
 }
