--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -1,6 +1,7 @@
 @use 'angular-theme' as fds;
 @use 'angular-theme/base';
 @use 'angular-components/toaster/src/toaster.theme' as toaster;
+@use 'angular-components/changelog/src/changelog.theme' as changelog;
 
 @include fds.uxg-core();
 
@@ -16,7 +17,7 @@
   // @include banner.theme($theme);
   // @include skeleton.theme($theme);
   // @include repeater.theme($theme);
-  // @include changelog.theme($theme);
+  @include changelog.theme($theme);
   @include toaster.theme($theme);
   // @include video-thumbnail.theme($theme);
   // @include status-stepper.theme($theme);
