--- a/libs/angular-components/changelog/src/_changelog.theme.scss
+++ b/libs/angular-components/changelog/src/_changelog.theme.scss
@@ -1,19 +1,20 @@
-@use 'sass:map';
-@use '@angular/material' as mat;
-@use '@finastra/angular-theme' as fds;
+// @use 'sass:map';
+// @use '@angular/material' as mat;
 // @use '@angular/flex-layout/core/sass/layout-bp' as flex-layout;
+@use '@finastra/fds-theme/color' as color;
+@use '@finastra/fds-theme/typography' as typography;
 
-@mixin theme($theme) {
-  $primary: map.get($theme, primary);
-  $secondary: map.get($theme, accent);
-  $error: map.get($theme, error);
-  $success: map.get($theme, success);
-  $foreground: map.get($theme, foreground);
-  $background: map.get($theme, background);
-  $elevation-color: map.get($foreground, elevation);
-  $foreground: map.get($theme, foreground);
-  $labels_background_opacity: 0.03;
-  $divider: fds.get-color-from-palette($foreground, divider, 0.07);
+@mixin theme($theme: null) {
+  // $primary: map.get($theme, primary);
+  // $secondary: map.get($theme, accent);
+  // $error: map.get($theme, error);
+  // $success: map.get($theme, success);
+  // $foreground: map.get($theme, foreground);
+  // $background: map.get($theme, background);
+  // $elevation-color: map.get($foreground, elevation);
+  // $foreground: map.get($theme, foreground);
+  // $labels_background_opacity: 0.03;
+  // $divider: color.get-color-from-palette($foreground, divider, 0.07);
 
   uxg-changelog {
     .title {
@@ -29,11 +30,13 @@
         z-index: 10;
       }
       .creator {
-        background-image: linear-gradient(
-          to right,
-          fds.get-color-from-palette($primary, default),
-          fds.get-color-from-palette($secondary, default)
-        );
+        // TODO: 
+        // background-image: linear-gradient(
+        //   to right,
+        //   color.color(primary),
+        //   color.color(secondary)
+        // );
+
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
         -webkit-box-decoration-break: clone;
@@ -47,7 +50,8 @@
     }
 
     .category {
-      color: fds.get-color-from-palette($primary, default);
+      // color: color.get-color-from-palette($primary, default);
+      @include color.color(primary);
     }
 
     .title:before {
@@ -71,15 +75,20 @@
     }
 
     a {
-      color: map.get($primary, default);
+      // color: map.get($primary, default);
+      @include color.color(primary);
       text-decoration: none;
       &:hover {
-        color: map.get($secondary, default);
+        // color: map.get($secondary, default);
+        @include color.color(secondary);
       }
     }
 
     .change-detail:not(.last-change) {
-      border-bottom: 1px solid $divider;
+      // border-bottom: 1px solid $divider;
+      @include color.property(border-bottom, divider);
+      border-bottom-width: 1px;
+      border-style: solid;
     }
 
     .changelog-container {
@@ -87,55 +96,106 @@
       .last-release,
       .first-release {
         border-radius: 6px;
-        background-color: fds.get-color-from-palette($background, card);
-        @include mat.elevation(4, $elevation-color, 0.6);
+        // background-color: color.get-color-from-palette($background, card);
+        // @include color.property(background-color, $background);
+        // @include mat.elevation(4, $elevation-color, 0.6);
+        // TODO
       }
 
       .change {
         .new {
-          color: map.get($primary, default);
-          border: 1px solid map.get($primary, default);
-          background-color: fds.get-color-from-palette($primary, default, $labels_background_opacity);
+          // color: map.get($primary, default);
+          // border: 1px solid map.get($primary, default);
+          // background-color: color.get-color-from-palette($primary, default, $labels_background_opacity);
+          @include color.color(primary);
+          @include color.property(border, primary);
+          border-width: 1px;
+          border-style: solid;
+          @include color.property(background-color, primary);
+          opacity: 0.03;
         }
         .update {
-          color: map.get($success, default);
-          border: 1px solid map.get($success, default);
-          background-color: fds.get-color-from-palette($success, default, $labels_background_opacity);
+          // color: map.get($success, default);
+          // border: 1px solid map.get($success, default);
+          // background-color: color.get-color-from-palette($success, default, $labels_background_opacity);
+          @include color.color(success);
+          @include color.property(border, success);
+          border-width: 1px;
+          border-style: solid;
+          @include color.property(background-color, success);
+          opacity: 0.03;
         }
         .bugfix {
-          color: map.get($error, default);
-          border: 1px solid map.get($error, default);
-          background-color: fds.get-color-from-palette($error, default, $labels_background_opacity);
+          // color: map.get($error, default);
+          // border: 1px solid map.get($error, default);
+          // background-color: color.get-color-from-palette($error, default, $labels_background_opacity);
+          @include color.color(error);
+          @include color.property(border, error);
+          border-width: 1px;
+          border-style: solid;
+
+          @include color.property(background-color, error);
+          opacity: 0.03;
         }
         .deprecated {
-          color: fds.get-color-from-palette($foreground, text, 0.8);
-          border: 1px solid fds.get-color-from-palette($foreground, text, 0.8);
-          background-color: fds.get-color-from-palette(fds.$mat-grey, 400, $labels_background_opacity);
+          // color: color.get-color-from-palette($foreground, text, 0.8);
+          // border: 1px solid color.get-color-from-palette($foreground, text, 0.8);
+          // background-color: color.get-color-from-palette(color.$mat-grey, 400, $labels_background_opacity);
+          @include color.color(foreground);
+          opacity: 0.8;
+
+          @include color.property(border, foreground);
+          opacity: 0.8;
+          border-width: 1px;
+          border-style: solid;
+          
+          // @include color.property(background-color, $mat-grey);
+          // opacity: 0.03;
+          // TODO
         }
       }
 
       .release-detail {
         &::after {
-          border-left: 2px dotted map.get($primary, default);
+          // border-left: 2px dotted map.get($primary, default);
+          @include color.property(border-left, primary);
+          border-left-width: 2px;
+          border-left-style: dotted;
         }
       }
 
       .first-release {
         &::after {
-          background-color: map.get($primary, default);
+          // background-color: map.get($primary, default);
+          @include color.property(background-color, primary);
         }
       }
 
       .release-detail::before,
       .last-release::before {
-        color: map.get($background, default);
-        border: 8px solid map.get($primary, default);
-        background-color: map.get($primary, default);
+        // color: map.get($background, default);
+        // border: 8px solid map.get($primary, default);
+        // background-color: map.get($primary, default);
+        // @include color.color($background);
+        // TODO:
+
+        @include color.property(border, primary);
+        border-style: solid;
+        border-width: 8px;
+
+        @include color.property(background-color, primary);
+
       }
 
       .first-release::before {
-        background-color: map.get($background, card);
-        border: 5px solid map.get($primary, default);
+        // background-color: map.get($background, card);
+        // border: 5px solid map.get($primary, default);
+        @include color.property(border, primary);
+        border-style: solid;
+        border-width: 5px;
+
+        // TODO:
+        // @include color.property(background-color, $background);
       }
     }
   }
@@ -145,27 +205,27 @@
   uxg-changelog {
     .title {
       .creator {
-        @include mat.typography-level($config, h2);
+        @include typography.typography(h2);
       }
 
       span {
-        @include mat.typography-level($config, h2);
+        @include typography.typography(h2);
       }
     }
 
     .date {
-      @include mat.typography-level($config, subtitle-1);
+      @include typography.typography(subtitle-1);
       white-space: nowrap;
       margin: 0;
     }
 
     .version-id {
-      @include mat.typography-level($config, subtitle-1);
+      @include typography.typography(subtitle-1);
       margin-bottom: 0;
     }
 
     .category {
-      @include mat.typography-level($config, h4);
+      @include typography.typography(h4);
     }
 
     // @include flex-layout.layout-bp(xs) {
