--- a/apps/angular-test-app/src/app/components/card-demo/card-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/card-demo/card-demo.component.scss
@@ -7,3 +7,85 @@
 
   margin-bottom: $uxg-spacing-5;
 }
+
+.account-detail-card {
+  .mat-mdc-card {
+    max-width: 629px;
+  }
+  .account-card-detail-summary {
+    display: flex;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    align-items: center;
+    .account-card-detail-summary-info {
+      display: flex;
+      padding-left: 16px;
+      flex-direction: column;
+    }
+  }
+  .account-detail-card-content {
+    display: flex;
+    .account-detail-card-content__static {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      padding-right: 16px;
+    }
+    .account-detail-card-content__status {
+      display: flex;
+      padding-left: 16px;
+      flex: 1;
+      flex-direction: column;
+    }
+    .account-detail-card-content__line {
+      display: flex;
+      padding-bottom: 8px;
+      .account-detail-card-content__line-title {
+        min-width: 196px;
+      }
+    }
+  }
+}
+
+.accounts-grid-card {
+  .mat-mdc-card-header {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-left: $uxg-spacing-0;
+
+    .mat-icon {
+      color: rgba(var(--fds-primary), 0.5);
+    }
+
+    .mat-mdc-card-header-text {
+      margin: $uxg-spacing-0;
+    }
+  }
+
+  mat-card-content.accounts-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: $uxg-spacing-3;
+    padding: $uxg-spacing-3 $uxg-spacing-3 $uxg-spacing-4;
+
+    .account-item {
+      cursor: pointer;
+      vertical-align: top;
+      display: inline-block;
+      text-align: center;
+
+      .uxg-icon-category {
+        display: inline-flex;
+        margin-bottom: $uxg-spacing-2;
+        width: $uxg-spacing-5;
+        height: $uxg-spacing-5;
+      }
+
+      .account-content {
+        .uxg-body-3 {
+          opacity: 0.65;
+        }
+      }
+    }
+  }
+}
