--- a/apps/angular-test-app/src/app/components/avatar-demo/avatar-demo.component.html
+++ b/apps/angular-test-app/src/app/components/avatar-demo/avatar-demo.component.html
@@ -1,4 +1,4 @@
-<h1 class="uxg-display-3">Avatars</h1>
+<h4 class="uxg-h4">Avatars</h4>
 <h5 class="uxg-h5">Default Avatar</h5>
 <div class="flex-row example-row">
   <uxg-avatar large></uxg-avatar>
