--- a/apps/angular-test-app/src/app/components/foundations-demo/foundations-demo.component.html
+++ b/apps/angular-test-app/src/app/components/foundations-demo/foundations-demo.component.html
@@ -1,5 +1,5 @@
 <div class="icon-test block-test">
-  <h3 class="uxg-h3">Icons</h3>
+  <h4 class="uxg-h4">Icons</h4>
   <div class="example-row icon-colors-test">
     <mat-icon aria-hidden="false" aria-label="Account icon">account_circle</mat-icon>
     <mat-icon aria-hidden="false" aria-label="Account icon" color="primary">account_circle</mat-icon>
@@ -24,7 +24,7 @@
 </div>
 
 <div class="logo-test block-test">
-  <h3 class="uxg-h3">Logo</h3>
+  <h4 class="uxg-h4">Logo</h4>
   <div class="example-row logo-normal-test">
     <div class="uxg-logo"></div>
   </div>
@@ -38,12 +38,12 @@
   </div>
 </div>
 
-<div class="typography-test block-test">
-  <h3 class="uxg-h3">Typography</h3>
+<div class="block-test">
+  <h4 class="uxg-h4">Typography</h4>
   <div class="example-row typo-display-test">
     <h1 class="uxg-display-1">uxg-display-1</h1>
     <h2 class="uxg-display-2">uxg-display-2</h2>
-    <h3 class="uxg-display-3">uxg-display-3</h3>
+    <h4 class="uxg-display-3">uxg-display-3</h4>
     <h4 class="uxg-display-4">uxg-display-4</h4>
     <h5 class="uxg-display-5">uxg-display-5</h5>
     <h6 class="uxg-display-6">uxg-display-6</h6>
@@ -73,14 +73,13 @@
   <div class="example-row typo-small-test">
     <p class="uxg-caption">uxg-caption</p>
     <p class="uxg-overline">uxg-overline</p>
-    <p class="uxg-legend">uxg-legend</p>
   </div>
 
   <div class="example-row typo-color-test">
-    <h3 class="uxg-h3 uxg-text-primary">uxg-text-primary</h3>
-    <h3 class="uxg-h3 uxg-text-secondary">uxg-text-secondary</h3>
-    <h3 class="uxg-h3 uxg-text-warn">uxg-text-warn</h3>
-    <h3 class="uxg-h3 uxg-text-error">uxg-text-error</h3>
-    <h3 class="uxg-h3 uxg-text-success">uxg-text-success</h3>
+    <h4 class="uxg-h4 uxg-text-primary">uxg-text-primary</h4>
+    <h4 class="uxg-h4 uxg-text-secondary">uxg-text-secondary</h4>
+    <h4 class="uxg-h4 uxg-text-warn">uxg-text-warn</h4>
+    <h4 class="uxg-h4 uxg-text-error">uxg-text-error</h4>
+    <h4 class="uxg-h4 uxg-text-success">uxg-text-success</h4>
   </div>
 </div>
