--- a/apps/angular-test-app/src/app/components/card-demo/card-demo.component.html
+++ b/apps/angular-test-app/src/app/components/card-demo/card-demo.component.html
@@ -121,32 +121,175 @@
   </div>
 
   <h4 class="uxg-h4">Accounts Grid</h4>
-  <mat-card class="accounts-grid-card mb-5">
-    <mat-card-header *ngIf="actions.length > 0">
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-        <mat-icon class="material-icons">more_vert</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item *ngFor="let action of actions">
-          <mat-icon>{{ action.icon }}</mat-icon>
-          <span>{{ action.title }}</span>
+  <div class="container mb-5">
+    <mat-card class="accounts-grid-card">
+      <mat-card-header *ngIf="actions.length > 0">
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <mat-icon class="material-icons">more_vert</mat-icon>
         </button>
-      </mat-menu>
-    </mat-card-header>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item *ngFor="let action of actions">
+            <mat-icon>{{ action.icon }}</mat-icon>
+            <span>{{ action.title }}</span>
+          </button>
+        </mat-menu>
+      </mat-card-header>
 
-    <mat-card-content class="accounts-grid">
-      <ng-container *ngFor="let item of gridAccounts">
-        <div class="account-item" (click)="onCardClick(item)">
-          <div class="uxg-icon-category">
-            <mat-icon class="material-icons" aria-label="credit card icon">credit_card</mat-icon>
+      <mat-card-content class="accounts-grid">
+        <ng-container *ngFor="let item of gridAccounts">
+          <div class="account-item" (click)="onCardClick(item)">
+            <div class="uxg-icon-category">
+              <mat-icon class="material-icons" aria-label="credit card icon">credit_card</mat-icon>
+            </div>
+            <div class="account-content">
+              <div class="uxg-subtitle-3">{{ item.type }}</div>
+              <div class="uxg-body-3">{{ item.number }}</div>
+              <div class="uxg-caption">{{ item.principalAmount | currency }}</div>
+            </div>
           </div>
-          <div class="account-content">
-            <div class="uxg-subtitle-3">{{ item.type }}</div>
-            <div class="uxg-body-3">{{ item.number }}</div>
-            <div class="uxg-caption">{{ item.principalAmount | currency }}</div>
-          </div>
-        </div>
-      </ng-container>
-    </mat-card-content>
-  </mat-card>
+        </ng-container>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <h4 class="uxg-h4">Default Card</h4>
+  <div class="container mb-5">
+    <mat-card class="default-card">
+      <mat-card-header>
+        <img mat-card-avatar src="https://randomuser.me/api/portraits/women/36.jpg" class="uxg-avatar" alt="mat card avatar" />
+        <mat-card-title>Open Innovation</mat-card-title>
+        <mat-card-subtitle>Rachelle Ross</mat-card-subtitle>
+      </mat-card-header>
+      <img
+        mat-card-image
+        src="https://res.cloudinary.com/ffdc/image/upload/c_scale,w_432/v1574872421/di7a2406_ka4chv.jpg"
+        alt="Photo of Fusion ONE"
+      />
+      <mat-card-content>
+        <p>
+          To unlock the potential of people and businesses by creating a platform for open innovation in the world of financial services.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-stroked-button color="primary">Like</button>
+        <button mat-stroked-button color="primary">Share</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <h4 class="uxg-h4">Simple Card</h4>
+  <div class="container mb-5">
+    <mat-card>
+      <div class="uxg-card-image-overlay">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAoGVRDsE54AMV1QYasu_H0M868g8fmS4_i9cz5G-U9JgYc96pwg"
+          alt="Photo of a Finatra event"
+        />
+      </div>
+
+      <mat-card-title>New Age in Finance</mat-card-title>
+      <mat-card-subtitle>Risk Management</mat-card-subtitle>
+
+      <mat-card-actions>
+        <ul class="uxg-avatar-list" dense>
+          <li><img src="https://randomuser.me/api/portraits/men/36.jpg" class="uxg-avatar" alt="uxg avatar" /></li>
+          <li><div class="uxg-avatar"></div></li>
+          <li><img src="https://randomuser.me/api/portraits/women/37.jpg" class="uxg-avatar" alt="uxg avatar" /></li>
+          <li class="uxg-avatar-number">+6</li>
+        </ul>
+        <span class="fill-remaining-space"></span>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" overlapTrigger="true">
+          <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>Redial</span>
+          </button>
+          <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voicemail</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+          </button>
+        </mat-menu>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <h4 class="uxg-h4">Dense Card</h4>
+  <div class="container mb-5">
+    <mat-card dense>
+      <div class="uxg-card-image-overlay">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAoGVRDsE54AMV1QYasu_H0M868g8fmS4_i9cz5G-U9JgYc96pwg"
+          alt="Photo of a Finatra event"
+        />
+      </div>
+
+      <mat-card-title>New Age in Finance</mat-card-title>
+      <mat-card-subtitle>Risk Management</mat-card-subtitle>
+
+      <mat-card-actions>
+        <ul class="uxg-avatar-list" dense>
+          <li><img src="https://randomuser.me/api/portraits/men/36.jpg" class="uxg-avatar" alt="uxg avatar" /></li>
+          <li><div class="uxg-avatar"></div></li>
+          <li><img src="https://randomuser.me/api/portraits/women/37.jpg" class="uxg-avatar" alt="uxg avatar" /></li>
+          <li class="uxg-avatar-number">+6</li>
+        </ul>
+        <span class="fill-remaining-space"></span>
+        <button mat-icon-button [matMenuTriggerFor]="menu" dense>
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" overlapTrigger="true">
+          <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>Redial</span>
+          </button>
+          <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voicemail</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+          </button>
+        </mat-menu>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <h4 class="uxg-h4">Product Card</h4>
+  <div class="flex-row mb-5">
+    <mat-card class="uxg-card-product mr-4" large>
+      <span class="uxg-h1 uxg-card-product-name">PRO</span>
+    </mat-card>
+    <mat-card class="uxg-card-product mr-4">
+      <span class="uxg-h3 uxg-card-product-name">PRO</span>
+    </mat-card>
+    <mat-card class="uxg-card-product mr-4" dense>
+      <span class="uxg-h4 uxg-card-product-name">PRO</span>
+    </mat-card>
+    <mat-card class="uxg-card-product" extra-dense>
+      <span class="uxg-h5 uxg-card-product-name">PRO</span>
+    </mat-card>
+  </div>
+
+  <h4 class="uxg-h4">Solution Card</h4>
+  <div class="flex-row mb-5">
+    <mat-card class="uxg-card-solution mr-4" large>
+      <span class="uxg-h1 uxg-card-solution-name">SOL</span>
+    </mat-card>
+    <mat-card class="uxg-card-solution mr-4">
+      <span class="uxg-h3 uxg-card-solution-name">SOL</span>
+    </mat-card>
+    <mat-card class="uxg-card-solution mr-4" dense>
+      <span class="uxg-h4 uxg-card-solution-name">SOL</span>
+    </mat-card>
+    <mat-card class="uxg-card-solution" extra-dense>
+      <span class="uxg-h5 uxg-card-solution-name">SOL</span>
+    </mat-card>
+  </div>
 </div>
