--- a/apps/angular-test-app/src/app/components/list-demo/list-demo.component.html
+++ b/apps/angular-test-app/src/app/components/list-demo/list-demo.component.html
@@ -72,10 +72,11 @@
 
   <h5 class="uxg-h5">Link list</h5>
   <mat-nav-list class="container uxg-link-list">
-    <a mat-list-item>
+    <a mat-list-item> 
       <mat-icon matListItemIcon>help</mat-icon>
-      <p matListItemTitle>Help</p>
-    </a>
+      <span matListItemTitle>Help</span>
+      </a>
+    
     <a mat-list-item>
       <mat-icon matListItemIcon>power</mat-icon>
       <p matListItemTitle>Sign out</p>
@@ -85,15 +86,15 @@
   <h5 class="uxg-h5">Ordered list</h5>
   <ol class="container uxg-ol">
     <li>
-      <h5 class="uxg-ol-title">First step</h5>
+      <h5 class="uxg-subtitle-1">First step</h5>
       <p class="uxg-body-1">Some text under the title of the ordered list.</p>
     </li>
     <li>
-      <h5 class="uxg-ol-title">Second step</h5>
+      <h5 class="uxg-subtitle-1">Second step</h5>
       <p class="uxg-body-1">Here is some more content.</p>
     </li>
     <li>
-      <h5 class="uxg-ol-title">Third step</h5>
+      <h5 class="uxg-subtitle-1">Third step</h5>
       <p class="uxg-body-1">You can imagine adding images or videos here.</p>
     </li>
   </ol>
