--- a/libs/angular-theme/lib/list/_list-theme.scss
+++ b/libs/angular-theme/lib/list/_list-theme.scss
@@ -4,15 +4,22 @@
 @mixin theme($theme: null) {
   .uxg-ol {
     *::before {
-      @include color.color(primary);
+      @include color.color(surface);
       @include color.property(background-color, primary);
     }
   }
 
   .mat-mdc-nav-list.mat-mdc-list-base {
+    padding: 0;
+
     &.uxg-link-list {
       .mat-mdc-list-item {
-        @include color.color(primary);
+        .mat-mdc-list-item-title {
+          @include color.color(primary);
+        }
+        .mat-icon {
+          @include color.color(primary);
+        }
       }
     }
 
@@ -27,7 +34,7 @@
 
         .mat-icon {
           @include color.color(on-surface-medium);
-          opacity: 0.75;
+          opacity: 0.25;
         }
 
         .mat-ripple-element {
@@ -56,14 +63,14 @@
 }
 
 @mixin typography($config: null) {
-  .uxg-nav-list.mat-mdc-nav-list.mat-list-base {
-    & .mat-mdc-list-item > * {
+  .uxg-nav-list.mat-mdc-nav-list.mat-mdc-list-base {
+    &.mat-mdc-list-item > * {
       @include typography.typography(subtitle-1);
     }
   }
 
-  .mat-list-base.mat-nav-list.uxg-link-list {
-    & .mat-mdc-list-item > * {
+  .uxg-link-list.mat-mdc-nav-list.mat-mdc-list-base {
+    &.mat-mdc-list-item > * {
       @include typography.typography(caption);
     }
   }
