--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -16,9 +16,9 @@
 // @use '../../expansion/expansion-theme';
 // @use '../../form-field/form-field-theme';
 @use '../../icon/icon-theme';
-// @use '../../link/link-theme';
+@use '../../link/link-theme';
 // @use '../../list/list-theme';
-// @use '../../logo/logo-theme';
+@use '../../logo/logo-theme';
 // @use '../../menu/menu-theme';
 // @use '../../sidenav/sidenav-theme';
 // @use '../../slide-toggle/slide-toggle-theme';
@@ -79,9 +79,9 @@
   // @include expansion-theme.theme($theme);
   // @include form-field-theme.theme($theme);
   @include icon-theme.theme($theme);
-  // @include link-theme.theme($theme);
+  @include link-theme.theme($theme);
   // @include list-theme.theme($theme);
-  // @include logo-theme.theme($theme);
+  @include logo-theme.theme($theme);
   // @include menu-theme.theme($theme);
   // @include sidenav-theme.theme($theme);
   // @include slide-toggle-theme.theme($theme);
