--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -13,7 +13,7 @@
 @use '../../link/link-theme';
 @use '../../logo/logo-theme';
 // @use '../../button-toggle/button-toggle-theme';
-// @use '../../breadcrumb/breadcrumb-theme';
+@use '../../breadcrumb/breadcrumb-theme';
 // @use '../../chips/chips-theme';
 // @use '../../expansion/expansion-theme';
 // @use '../../form-field/form-field-theme';
