--- a/apps/angular-test-app/src/app/app.component.html
+++ b/apps/angular-test-app/src/app/app.component.html
@@ -3,7 +3,7 @@
     <mat-sidenav #sidenav mode="over" fixedInViewport="true" [autoFocus]="false">
       <div class="uxg-nav-header">
         <mat-card class="uxg-card-product" extra-dense routerLink="/">
-          <span class="uxg-h5 uxg-card-product-name">DS</span>
+          <span class="uxg-h5 uxg-card-product-name">FDS</span>
         </mat-card>
         <h6 class="uxg-h6">ANGULAR COMPONENTS</h6>
       </div>
