--- a/apps/angular-test-app/src/app/app.component.scss
+++ b/apps/angular-test-app/src/app/app.component.scss
@@ -15,8 +15,7 @@ mat-sidenav-container {
 
   .uxg-card-product {
     cursor: pointer;
-    width: 45px;
-    margin-bottom: 10px;
+    margin-bottom: $uxg-spacing-3;
   }
 }
 .app-content {
