--- a/apps/angular-test-app/src/app/components/home/home.component.html
+++ b/apps/angular-test-app/src/app/components/home/home.component.html
@@ -1,8 +1,11 @@
 <main class="home-container">
   <div class="home-title">
-    <div class="home-title-content flex align-baseline">
-      <h2 class="uxg-h2 title mb-0">Angular Components</h2>
-      <span class="ml-3 uxg-caption"> v{{ version }} </span>
+    <div class="home-title-content flex flex-col">
+      <h3 class="uxg-h3">Finastra Design System</h3>
+      <div class="flex align-baseline">
+        <h2 class="uxg-h2 title mb-0">Angular Components</h2>
+        <span class="ml-3 uxg-caption"> v{{ version }} </span>
+      </div>
     </div>
   </div>
 
