--- a/apps/angular-test-app/src/app/components/list-demo/list-demo.component.html
+++ b/apps/angular-test-app/src/app/components/list-demo/list-demo.component.html
@@ -11,15 +11,6 @@
         <span matBadge="6" class="uxg-side-badge" matBadgeOverlap="false">Applications</span>
         <mat-icon matListItemIcon>chevron_right</mat-icon>
       </p>
-
-      <!-- <button mat-icon-button matListItemMeta>
-        <mat-icon>info</mat-icon>
-      </button> -->
-
-      <!-- <span matListItemMeta>
-        <mat-icon matListItemIcon>chevron_right</mat-icon>
-      </span> -->
-      <!-- <mat-icon matListItemIcon>chevron_right</mat-icon> -->
     </a>
     <a mat-list-item>
       <mat-icon matListItemIcon>notifications</mat-icon>
@@ -73,27 +64,27 @@
   <h5 class="uxg-h5">Link list</h5>
   <mat-nav-list class="container uxg-link-list">
     <a mat-list-item>
-      <mat-icon matListItemIcon>help</mat-icon>
-      <span matListItemTitle>Help</span>
+      <mat-icon>help</mat-icon>
+      <span>Help</span>
     </a>
     <a mat-list-item>
-      <mat-icon matListItemIcon>power</mat-icon>
-      <p matListItemTitle>Sign out</p>
+      <mat-icon>power</mat-icon>
+      <p>Sign out</p>
     </a>
   </mat-nav-list>
 
   <h5 class="uxg-h5">Ordered list</h5>
   <ol class="container uxg-ol">
     <li>
-      <h5 class="uxg-subtitle-1">First step</h5>
+      <h5 class="uxg-ol-title">First step</h5>
       <p class="uxg-body-1">Some text under the title of the ordered list.</p>
     </li>
     <li>
-      <h5 class="uxg-subtitle-1">Second step</h5>
+      <h5 class="uxg-ol-title">Second step</h5>
       <p class="uxg-body-1">Here is some more content.</p>
     </li>
     <li>
-      <h5 class="uxg-subtitle-1">Third step</h5>
+      <h5 class="uxg-ol-title">Third step</h5>
       <p class="uxg-body-1">You can imagine adding images or videos here.</p>
     </li>
   </ol>
