--- a/libs/angular-theme/lib/core/typography/_all-typography.scss
+++ b/libs/angular-theme/lib/core/typography/_all-typography.scss
@@ -7,7 +7,7 @@
 @use '../../card/card-theme';
 // @use '../../chips/chips-theme';
 // @use '../../form-field/form-field-theme';
-// @use '../../list/list-theme';
+@use '../../list/list-theme';
 // @use '../../table/table-theme';
 
 @mixin uxg-material-typography($config: null) {
@@ -21,6 +21,6 @@
   @include card-theme.typography($config);
   // @include chips-theme.typography($config);
   // @include form-field-theme.typography($config);
-  // @include list-theme.typography($config);
+  @include list-theme.typography($config);
   // @include table-theme.typography($config);
 }
