--- a/libs/angular-theme/lib/toolbar/_toolbar-theme.scss
+++ b/libs/angular-theme/lib/toolbar/_toolbar-theme.scss
@@ -1,22 +1,18 @@
-@use 'sass:map';
-@use '../core/theming/palette';
+@use '../core/theming/color-utility' as utility;
 
 @mixin theme($theme) {
-  $foreground: map.get($theme, foreground);
-  $primary: map.get($theme, primary);
-
   .uxg-toolbar {
     .uxg-toolbar-icon-menu {
-      color: palette.get-color-from-palette($foreground, text, 0.38);
+      color: utility.get-color-from-token(on-surface, 0.38, $theme);
     }
 
     &.mat-primary {
-      .mat-icon-button {
-        color: palette.get-color-from-palette($primary, default-contrast);
+      .mat-mdc-icon-button {
+        color: utility.get-color-from-token(on-primary, null, $theme);
       }
 
       .uxg-toolbar-icon-menu {
-        color: palette.get-color-from-palette($primary, default-contrast, 0.38);
+        color: utility.get-color-from-token(on-primary, 0.38, $theme);
       }
     }
   }
