--- a/apps/angular-test-app/src/app/components/home/home.component.scss
+++ b/apps/angular-test-app/src/app/components/home/home.component.scss
@@ -12,6 +12,17 @@
   background: linear-gradient(90deg, #0a0014 0%, #23055a 40%, #50015a 80%, #4b0254 100%) !important;
   background-size: 200% 200%;
 
+  &::before {
+    content: '';
+    position: absolute;
+    background-image: url(/assets/angular-white-transparent.svg);
+    background-size: 280px;
+    inset: 0;
+    background-repeat: no-repeat;
+    background-position: 65% 20px;
+    opacity: 0.2;
+  }
+
   .home-title-content {
     box-sizing: border-box;
     max-width: 960px;
